--- a/Core.DALC/QOfreces.WPF/ReportValoraciones.xaml
+++ b/Core.DALC/QOfreces.WPF/ReportValoraciones.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="QOfreces.WPF.ReporteMovimientos"
+﻿<Window x:Class="QOfreces.WPF.ReportValoraciones"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,11 +6,10 @@
         xmlns:local="clr-namespace:QOfreces.WPF"
         xmlns:rv="clr-namespace:Microsoft.Reporting.WinForms;assembly=Microsoft.ReportViewer.WinForms" 
         mc:Ignorable="d"
-        Title="ReporteMovimientos" Height="300" Width="600.663">
+        Title="ReportValoraciones" Height="300" Width="678.35">
     <Grid>
         <WindowsFormsHost>
             <rv:ReportViewer x:Name="_reportViewer"/>
         </WindowsFormsHost>
-
     </Grid>
 </Window>
