--- a/Core.DALC/QOfreces.WPF/mainwindow.xaml
+++ b/Core.DALC/QOfreces.WPF/mainwindow.xaml
@@ -11,7 +11,7 @@
         Icon="img/logo.png"
         BorderBrush="{DynamicResource AccentColorBrush}"
         BorderThickness="1"
-        Title="Login" Height="332" Width="300"  WindowStartupLocation="CenterScreen">
+        Title="Login" Height="332" Width="300"  WindowStartupLocation="CenterScreen" WindowTransitionsEnabled="False">
     <Grid>
       
         <Button x:Name="button" Content="Ingresar" HorizontalAlignment="Left" Margin="91,242,0,0" VerticalAlignment="Top" Width="75" Click="button_Click" BorderBrush="Black" TabIndex="3"/>
