--- a/Core.DALC/QOfreces.WPF/MenuEncargado.xaml
+++ b/Core.DALC/QOfreces.WPF/MenuEncargado.xaml
@@ -15,25 +15,24 @@
         x:Name="tituloEncargado"   Height="730" Width="700" Background="Black" WindowStartupLocation="CenterScreen" MinWidth="700" MinHeight="730" MaxWidth="700" MaxHeight="730">
 
     <Grid>
-        <Controls:Tile x:Name="tiConsultarOferta" Background="Orange" Margin="10,425,542,152" TitleFontSize="12" Title="Consultar oferta"  Height="Auto" Width="Auto" Click="tiConsultarOferta_Click">
+        <Controls:Tile x:Name="tiConsultarOferta" Background="Orange" Margin="8,442,544,135" TitleFontSize="12" Title="Consultar oferta"  Height="Auto" Width="Auto" Click="tiConsultarOferta_Click">
             <Image x:Name="image1" Height="100" Width="100" Source="img/Consultar.png"/>
         </Controls:Tile>
-        <Controls:Tile x:Name="tiGenerarOferta" Background="Orange" Margin="10,50,542,527" TitleFontSize="12" Title="Generar oferta"  Width="Auto" Height="Auto" Click="tiGenerarOferta_Click">
+        <Controls:Tile x:Name="tiGenerarOferta" Background="Orange" Margin="8,66,544,511" TitleFontSize="12" Title="Generar oferta"  Width="Auto" Height="Auto" Click="tiGenerarOferta_Click">
             <Image x:Name="image2" Height="100" Width="100" Source="img/Generar.png"/>
         </Controls:Tile>
-        <Controls:Tile x:Name="tiPublicarOferta" Background="Orange" Margin="10,175,542,402" TitleFontSize="12" Title="Publicar oferta" Height="Auto" Width="Auto" Click="tiPublicarOferta_Click">
+        <Controls:Tile x:Name="tiPublicarOferta" Background="Orange" Margin="8,191,544,386" TitleFontSize="12" Title="Publicar oferta" Height="Auto" Width="Auto" Click="tiPublicarOferta_Click">
             <Image x:Name="image" Height="100" Width="100" Source="img/Publicar.png"/>
         </Controls:Tile>
-        <Controls:Tile x:Name="tiProducto" Background="Orange" Margin="10,300,542,277" TitleFontSize="12" Title="Mantenedor Producto"  Width="Auto" Height="Auto" Click="tiProducto_Click">
+        <Controls:Tile x:Name="tiProducto" Background="Orange" Margin="8,317,544,260" TitleFontSize="12" Title="Mantenedor Producto"  Width="Auto" Height="Auto" Click="tiProducto_Click">
             <Image x:Name="image3" Height="100" Width="100" Stretch="Fill" Source="img/MantenedorProducto.png"/>
         </Controls:Tile>
-        <Controls:Tile x:Name="tiReportes" Background="Orange" Margin="10,550,542,27" TitleFontSize="12" Title="Reportes de tienda" Height="Auto" Width="Auto" Click="tiReportes_Click" >
+        <Controls:Tile x:Name="tiReportes" Background="Orange" Margin="8,567,544,10" TitleFontSize="12" Title="Reportes de tienda" Height="Auto" Width="Auto" Click="tiReportes_Click" >
             <Image x:Name="image5" Height="100" Width="100" Stretch="Fill" Source="img/Report.png"/>
         </Controls:Tile>
-        <Label x:Name="lblBienvenida" Content="Hola " Foreground="White" HorizontalAlignment="Left" Margin="8,4,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-        <Label x:Name="lblUsuarioActual" Content=" " Foreground="White" HorizontalAlignment="Left" Margin="48,4,0,0" VerticalAlignment="Top" FontStyle="Italic" FontWeight="Bold" RenderTransformOrigin="0.348,0.211"/>
+        <Label x:Name="lblBienvenida" Content="Hola " Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label x:Name="lblUsuarioActual" Content="" Foreground="White" HorizontalAlignment="Left" Margin="31,1,0,0" VerticalAlignment="Top" FontStyle="Italic" RenderTransformOrigin="0.348,0.211" Width="118" FontWeight="Bold" FontSize="11"/>
         <Grid Margin="153,0,0,0">
-
             <Controls:Flyout x:Name="flyGenerar" Position="Right" Header="Generar oferta" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="538" Margin="-1,0,0,0">
                 <Grid>
                     <Button x:Name="btnGenOferta" Content="Generar Oferta" HorizontalAlignment="Left" Margin="400,0,0,0" VerticalAlignment="Top" Width="128" BorderBrush="Black" Height="27" RenderTransformOrigin="0.486,-0.635" Click="btnGenOferta_Click"/>
@@ -231,7 +230,11 @@
                 </Grid>
             </Controls:Flyout>
         </Grid>
-        
+        <Button x:Name="button" Background="Orange"  HorizontalAlignment="Left" Margin="8,30,0,0" VerticalAlignment="Top" Width="38" Height="31" Click="button_Click">
+            <Image Source="img/Logout.png" Height="25" Width="29"></Image>
+        </Button>
+        <Label x:Name="lblBienvenida_Copy" Content="Salir" Foreground="White" HorizontalAlignment="Left" Margin="48,34,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+
 
     </Grid>
 </Controls:MetroWindow>
