--- a/Core.DALC/QOfreces.WPF/MenuAdministrador.xaml
+++ b/Core.DALC/QOfreces.WPF/MenuAdministrador.xaml
@@ -8,25 +8,26 @@
         xmlns:behaviours="clr-namespace:MahApps.Metro.Behaviours;assembly=MahApps.Metro"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:rv="clr-namespace:Microsoft.Reporting.WinForms;assembly=Microsoft.ReportViewer.WinForms" 
-        Icon="img/logo.png"
+        Icon="img/logo.png"              
         BorderBrush="{DynamicResource AccentColorBrush}"
         BorderThickness="1"
         mc:Ignorable="d"
         Height="730" Width="700" Background="Black" WindowStartupLocation="CenterScreen" MinWidth="700" MinHeight="730" MaxWidth="700" MaxHeight="730" >
+        
     <Grid>
-        <Controls:Tile x:Name="tiProducto" Background="Orange" Margin="10,67,542,510" TitleFontSize="12" Title="Mantenedor Producto" Height="Auto" Width="Auto" Click="tiProducto_Click">
+        <Controls:Tile x:Name="tiProducto" Background="Orange" Margin="8,67,544,510" TitleFontSize="12" Title="Mantenedor Producto" Height="Auto" Width="Auto" Click="tiProducto_Click">
             <Image x:Name="image3" Height="100" Width="100" Stretch="Fill" Source="img/MantenedorProducto.png"/>
         </Controls:Tile>
-        <Controls:Tile x:Name="tiUsuario" Background="Orange" Margin="10,192,542,385" TitleFontSize="12" Title="Mantenedor Usuario" Height="Auto" Width="Auto" Click="tiUsuario_Click">
+        <Controls:Tile x:Name="tiUsuario" Background="Orange" Margin="8,192,544,385" TitleFontSize="12" Title="Mantenedor Usuario" Height="Auto" Width="Auto" Click="tiUsuario_Click">
             <Image x:Name="image1" Height="100" Width="100" Stretch="Fill" Source="img/MantenedorUsuario.png"/>
         </Controls:Tile>
-        <Controls:Tile x:Name="tiEmpresa" Background="Orange" Margin="10,317,542,260" TitleFontSize="12" Title="Mantenedor Empresa" Height="Auto" Width="Auto" Click="tiEmpresa_Click">
+        <Controls:Tile x:Name="tiEmpresa" Background="Orange" Margin="8,317,544,260" TitleFontSize="12" Title="Mantenedor Empresa" Height="Auto" Width="Auto" Click="tiEmpresa_Click">
             <Image x:Name="image2" Height="100" Width="100" Stretch="Fill" Source="img/MantenedorEmpresa.png"/>
         </Controls:Tile>
-        <Controls:Tile x:Name="tiRubro" Background="Orange" Margin="10,442,542,135" TitleFontSize="12" Title="Mantenedor Rubro" Height="Auto" Width="Auto" Click="tiRubro_Click">
+        <Controls:Tile x:Name="tiRubro" Background="Orange" Margin="8,442,544,135" TitleFontSize="12" Title="Mantenedor Rubro" Height="Auto" Width="Auto" Click="tiRubro_Click">
             <Image x:Name="image4" Height="100" Width="100" Stretch="Fill" Source="img/MantenedorRubro.png"/>
         </Controls:Tile>
-        <Controls:Tile x:Name="tiReportes" Background="Orange" Margin="10,567,542,10" TitleFontSize="12" Title="Archivos BI" Height="Auto" Width="Auto" Click="tiReportes_Click">
+        <Controls:Tile x:Name="tiReportes" Background="Orange" Margin="8,567,544,10" TitleFontSize="12" Title="Archivos BI" Height="Auto" Width="Auto" Click="tiReportes_Click">
             <Image x:Name="image5" Height="100" Width="100" Stretch="Fill" Source="img/Report.png"/>
         </Controls:Tile>
         <Grid HorizontalAlignment="Left" Height="697" Margin="153,0,0,0" VerticalAlignment="Top" Width="537">
@@ -34,7 +35,7 @@
                 <Grid HorizontalAlignment="Left" Height="619" Margin="10,0,0,0" Width="518">
                     <Controls:MetroTabControl Name="tcMain">
                         <Controls:MetroTabItem Header="Agregar" Foreground="White">
-                            
+
                             <Grid>
                                 <Label x:Name="lblInfoPA" Content="Ingrese los datos requeridos para crear un nuevo producto." Foreground="White" HorizontalAlignment="Left" Margin="4,9,0,0" VerticalAlignment="Top"/>
 
@@ -109,7 +110,7 @@
                     </Controls:MetroTabControl>
                 </Grid>
             </Controls:Flyout>
-            <!--<Controls:Flyout x:Name="flyUsuarios" Position="Right" Header="Mantenedor de usuarios" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="538" Margin="-1,0,0,0">
+            <Controls:Flyout x:Name="flyUsuarios" Position="Right" Header="Mantenedor de usuarios" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="538" Margin="-1,0,0,0">
                 <Controls:MetroTabControl>
                     <Controls:MetroTabItem Header="Agregar">
                         <Grid>
@@ -386,7 +387,7 @@
             </Controls:Flyout>
             <Controls:Flyout x:Name="FlyBI" Position="Right" Header="Business Intelligence" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="538" Margin="-1,0,0,0">
                 <Controls:MetroTabControl>
-                    <Controls:MetroTabItem Header="Reporte de movimientos">
+                    <Controls:MetroTabItem Header="Reporte de movimientos" Margin="0,0,-4,0">
                         <Grid Margin="5,76,5,10">
                             <WindowsFormsHost>
                                 <rv:ReportViewer x:Name="_reportViewer"/>
@@ -394,12 +395,12 @@
                         </Grid>
                     </Controls:MetroTabItem>
                 </Controls:MetroTabControl>
-            </Controls:Flyout>-->
+            </Controls:Flyout>
         </Grid>
         <Label x:Name="lblBienvenida" Content="Hola " Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top" FontWeight="Bold"/>
         <Label x:Name="lblUsuarioActual" Content=" " Foreground="White" HorizontalAlignment="Left" Margin="36,0,0,0" VerticalAlignment="Top" FontStyle="Italic" FontWeight="Bold"/>
-        <Button x:Name="button" Background="Orange"  HorizontalAlignment="Left" Margin="8,30,0,0" VerticalAlignment="Top" Width="38" Height="31" Click="button_Click">
-            <Image Source="img/Logout.png" Height="25" Width="29"></Image>
+        <Button x:Name="button"  Background="Orange"  HorizontalAlignment="Left" Margin="8,30,0,0" VerticalAlignment="Top" Width="38" Height="31" Click="button_Click" BorderThickness="0" Padding="0">
+            <Image Source="img/Logout.png" Stretch="Fill" Height="31" Width="38"></Image>
         </Button>
         <Label x:Name="lblBienvenida_Copy" Content="Salir " Foreground="White" HorizontalAlignment="Left" Margin="48,33,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
     </Grid>
