--- a/Core.DALC/QOfreces.WPF/MenuAdministrador.xaml
+++ b/Core.DALC/QOfreces.WPF/MenuAdministrador.xaml
@@ -396,12 +396,33 @@
                     </Controls:MetroTabItem>
                 </Controls:MetroTabControl>
             </Controls:Flyout>
+            <Controls:Flyout x:Name="FlyPerfil" Position="Right" Header="Perfil Usuario" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="538" Margin="-1,0,0,0">
+                <Grid>
+                    <Label x:Name="label" Content="Datos Personales" Foreground="White" HorizontalAlignment="Left" Margin="20,14,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="label_Copy" Foreground="White" HorizontalAlignment="Left" Margin="159,197,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="label_Copy1" FontWeight="Bold" Content="Apellido:" Foreground="White" HorizontalAlignment="Left" Margin="20,92,0,0" VerticalAlignment="Top" Width="59"/>
+                    <Label x:Name="label_Copy2" FontWeight="Bold" Content="Telefono:" Foreground="White" HorizontalAlignment="Left" Margin="20,165,0,0" VerticalAlignment="Top" Width="59"/>
+                    <Label x:Name="label_Copy3" FontWeight="Bold" Content="Email:" Foreground="White" HorizontalAlignment="Left" Margin="20,130,0,0" VerticalAlignment="Top" Width="59"/>
+                    <Label x:Name="label_Copy4" FontWeight="Bold" Content="Fecha de nacimiento:" Foreground="White" HorizontalAlignment="Left" Margin="20,196,0,0" VerticalAlignment="Top" Width="123"/>
+                    <Label x:Name="label_Copy5" FontWeight="Bold" Content="Genero:" Foreground="White" HorizontalAlignment="Left" Margin="20,227,0,0" VerticalAlignment="Top" Width="54"/>
+                    <Label x:Name="label_Copy6" FontWeight="Bold" Content="Perfil:" Foreground="White" HorizontalAlignment="Left" Margin="264,14,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblNombre" Content="" Foreground="White" HorizontalAlignment="Left" Margin="160,55,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblTelefono" Content="" Foreground="White" HorizontalAlignment="Left" Margin="160,165,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblEmail" Content="" Foreground="White" HorizontalAlignment="Left" Margin="160,130,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblApellido" Content="" Foreground="White" HorizontalAlignment="Left" Margin="160,92,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="label_Copy11" Content="Nombre:" Foreground="White" HorizontalAlignment="Left" Margin="20,55,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+                    <Label x:Name="lblFecha" Content="" Foreground="White" HorizontalAlignment="Left" Margin="160,196,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblGenero" Content="" Foreground="White" HorizontalAlignment="Left" Margin="160,227,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="lblPerfil" Content="Administrador" Foreground="White" HorizontalAlignment="Left" Margin="307,14,0,0" VerticalAlignment="Top"/>
+                </Grid>
+            </Controls:Flyout>
         </Grid>
-        <Label x:Name="lblBienvenida" Content="Hola " Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top" FontWeight="Bold"/>
-        <Label x:Name="lblUsuarioActual" Content=" " Foreground="White" HorizontalAlignment="Left" Margin="36,0,0,0" VerticalAlignment="Top" FontStyle="Italic" FontWeight="Bold"/>
-        <Button x:Name="button"  Background="Orange"  HorizontalAlignment="Left" Margin="8,30,0,0" VerticalAlignment="Top" Width="38" Height="31" Click="button_Click" BorderThickness="0" Padding="0">
+        <Button x:Name="btnPerfil" Background="Orange" HorizontalAlignment="Left" Margin="72,26,0,0" VerticalAlignment="Top" Width="75" Height="36" BorderThickness="0" MinHeight="0" Padding="0" Click="btnPerfil_Click">
+            <Image Source="img/Perfil.png"  Height="40" Width="75"></Image>
+        </Button>
+        <Label x:Name="lblUsuarioActual" Content=" " Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top" FontStyle="Italic" FontWeight="Bold"/>
+        <Button x:Name="button"  Background="Orange"  HorizontalAlignment="Left" Margin="8,26,0,0" VerticalAlignment="Top" Width="45" Height="36" Click="button_Click" BorderThickness="0" Padding="0">
             <Image Source="img/Logout.png" Stretch="Fill" Height="31" Width="38"></Image>
         </Button>
-        <Label x:Name="lblBienvenida_Copy" Content="Salir " Foreground="White" HorizontalAlignment="Left" Margin="48,33,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
     </Grid>
 </Controls:MetroWindow>
